# llm-hackathon2024

./: LICENSE  README.md  llm_challenge_template.ipynb  pyproject.toml
llm_hackathon/: _version.py  scoring.py
